Alteração no helper  - Bug entre cadastrar e editar getId  - adição de validação de campo vazio
Class Aluno
 - Adição Construtor vazio
Cadastro Aluno Activity
 - Adição de menu backhome

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cad_aluno_site">Informe seu site</string>
     <string name="cad_aluno_email">Informe seu email!</string>
     <string name="salvar">Salvar</string>
+    <string name="btn_excluir">Excluir Aluno</string>
 </resources>
